[package]
name = "tunnix-common"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Encryption
chacha20poly1305.workspace = true
argon2.workspace = true
rand.workspace = true
zeroize.workspace = true

# Serialization
serde.workspace = true
bincode.workspace = true
toml.workspace = true

# Async & utilities
tokio.workspace = true
bytes.workspace = true
futures.workspace = true

# Error handling
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
