[package]
name = "tunnix"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "tunnix"
path = "src/main.rs"

[dependencies]
# Common library
tunnix-common = { path = "../common" }

# Async & HTTP (server needs hyper; client needs reqwest)
tokio.workspace = true
futures.workspace = true
hyper.workspace = true
hyper-util.workspace = true
http-body-util.workspace = true
reqwest.workspace = true

# CLI & Config
clap = { workspace = true, features = ["derive", "env"] }
toml.workspace = true
serde.workspace = true

# Error handling & logging
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

# TLS
rustls.workspace = true

# Encoding
base64ct.workspace = true
rand.workspace = true

# Utilities
bytes.workspace = true
